--- a/mint/index.sass
+++ b/mint/index.sass
@@ -1,7 +1,9 @@
 @import "common/base"
-@import "header/index"
 @import "footer/index"
 @import "modal/index"
+@import "header/index"
+@import "../landing/header/index"
+
 
 @keyframes flying-box
   0%
@@ -25,16 +27,6 @@
   @media (max-width: 700px)
     margin-bottom: 0
     overflow-x: hidden
-  &-background
-    z-index: -100
-    top: 75%
-    border-radius: 0 0 32px 32px
-    position: absolute
-    height: calc( 36% )
-    @media (max-width: 700px)
-      height: 22%
-      top: 78%
-      border-radius: 32px
   &-background-fake
     z-index: 99
     top: 60%
@@ -271,7 +263,7 @@
       align-items: center
 
 .connect-link
-  margin-top: 140px
+  margin-bottom: 80px
   cursor: pointer
   display: flex
   height: 44px
@@ -317,6 +309,7 @@
   width: 339px
   display: flex
   justify-content: center
+  align-items: center
 
 .flying-box
   position: absolute
@@ -379,6 +372,53 @@
   @media (max-width: 700px)
     margin: 0 auto
 
+.mint-required
+  border-radius: 24px
+  border: 1px solid #838181
+  background: var(--black-primary, #2C3034)
+  display: inline-flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  gap: 4px
+  width: 264px
+  height: 130px
+  margin-bottom: 100px
+
+  &-title
+    color: rgba(243, 235, 234, 0.70)
+    font-family: Inter
+    font-size: 16px
+    font-style: normal
+    font-weight: 400
+    line-height: 20px 
+    margin: 0
+
+  &-info
+    color: var(--elevation-0, #F3EBEA)
+    font-family: Inter
+    font-size: 18px
+    font-style: normal
+    font-weight: 700
+    line-height: 22px
+    margin: 0
+
+  &-link
+    color: var(--elevation-0, #F3EBEA)
+    text-align: center
+    font-feature-settings: 'calt' off, 'liga' off
+    font-family: Inter
+    font-size: 14px
+    font-style: normal
+    font-weight: 600
+    line-height: 16px
+    text-decoration-line: underline
+    margin-top: 14px
+    justify-content: center
+    align-items: center
+    display: flex
+    gap: 8px
+  
 .nft-open-case
   height: 260px
   width: 230px
@@ -478,6 +518,9 @@
     letter-spacing: 0.14px
 
 .mint-timeline
+  margin: 0 auto
+  padding: 80px 0
+  padding-bottom: 120px
   h1
     color: #2C3034
     text-align: center
@@ -487,7 +530,7 @@
     line-height: normal
     letter-spacing: 1.12px
   .timeline-items
-    padding-top: 40px
+    padding-top: 80px
     display: flex
     justify-content: space-between
     gap: 16px
@@ -495,24 +538,29 @@
     @media (max-width: 700px)
       flex-direction: column
       max-width: 100%
-      padding-bottom: 40px
+      padding: 0 24px 40px
+
 .timeline-item
   width: 258.5px
-  opacity: .2
-  flex: 1 1 auto
+  opacity: .4
+  flex: 1
   border-radius: 40px
   border: 1px solid #C7BAB8
+  background-color: #EBDEDC
   display: flex
   padding: 24px
   flex-direction: column
   flex-shrink: 0
+
   @media (max-width: 700px)
     width: 100%
     padding: 24px 0
+  
   &-image
     padding-bottom: 24px
     @media (max-width: 700px)
       padding-left: 24px
+    
   &-dates
     padding-bottom: 12px
     color: #6B6661
