--- a/mint/modal/index.pug
+++ b/mint/modal/index.pug
@@ -14,6 +14,8 @@
               p Airdrop 0.01 NEAR to pay for gas
           .modal-qr
             .modal-qr-wrap
+          a.modal-mobile-button-connect(target="_blank" rel="noopener noreferrer") Open in HERE Wallet
+            
         .modal-footer
           img.img-near(src="../assets/mint/modal-near.svg").hands
 
