--- a/mint/modal/index.sass
+++ b/mint/modal/index.sass
@@ -124,6 +124,7 @@
   @media (max-width: 877px)
     max-width: 100%
   .airdrop
+    align-items: center
     box-sizing: border-box
     margin-top: 40px
     display: flex
@@ -139,6 +140,9 @@
       margin: 8px 0
     img
       padding-left: 12px
+      width: 30px
+      height: 30px
+
 .modal-qr
   display: flex
   flex-direction: column
