--- a/mint/index.sass
+++ b/mint/index.sass
@@ -39,6 +39,7 @@
   top: 0
   left: 50%
   transform: translate(-50%, 0)
+  width: 100vw
   z-index: -100
   opacity: 0.1
   @media (max-width: 700px)
