--- a/mint/index.sass
+++ b/mint/index.sass
@@ -39,9 +39,11 @@
   top: 0
   left: 50%
   transform: translate(-50%, 0)
-  width: 100vw
   z-index: -100
   opacity: 0.1
+  img
+    width: 100vw
+
   @media (max-width: 700px)
     display: none
 
