--- a/mint/index.sass
+++ b/mint/index.sass
@@ -330,7 +330,7 @@
   position: fixed
   top: 0
   left: 0
-  width: 120%
+  width: 100vw
   height: 100%
   opacity: 0
   transition: opacity 0.4s linear
