--- a/mint/index.sass
+++ b/mint/index.sass
@@ -4,7 +4,6 @@
 @import "header/index"
 @import "../landing/header/index"
 
-
 @keyframes flying-box
   0%
     transform: translateY(-1.5%)
@@ -263,6 +262,7 @@
     display: flex
     flex-direction: row
     justify-content: space-between
+    flex-wrap: wrap
     @media (max-width: 700px)
       flex-direction: column
       align-items: center
@@ -374,6 +374,7 @@
   display: flex
   flex-direction: row
   justify-content: space-between
+  flex-wrap: wrap
   @media (max-width: 700px)
     flex-direction: column
     padding-top: 70px
@@ -545,6 +546,7 @@
     padding-top: 80px
     display: flex
     justify-content: space-between
+    flex-wrap: wrap
     gap: 16px
     max-width: 100%
     @media (max-width: 700px)
