--- a/mint/header/index.sass
+++ b/mint/header/index.sass
@@ -1,4 +1,12 @@
+@media (max-width: 900px)
+    .body_margin .header
+        top: 0 !important
+
 .header
+    .header-body.open
+        top: 0 !important
+
+    position: fixed !important
     .header-connect
         display: flex
         align-items: center
