--- a/mint/modal/index.sass
+++ b/mint/modal/index.sass
@@ -131,6 +131,7 @@
     flex-direction: row
     gap: 8px
     border-radius: 12px
+    padding: 4px 0
     border: 1px solid #087164
     color: #087164
     @media (max-width: 877px)
