--- a/mint/index.sass
+++ b/mint/index.sass
@@ -234,6 +234,11 @@
   font-weight: 600
   line-height: normal
   padding: 13px 49px
+  .connected
+    display: none
+  
+  @media (max-width: 700px)
+    display: flex !important
 
 .mint-button-more
   text-decoration: none
